# agente-ia-youtube

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_graph.py  manage.py  pyproject.toml  pytest.ini
src/: __init__.py
src/application/: __init__.py
src/application/use_cases/: __init__.py  use_cases.py
src/application/workflow/: __init__.py  graph.py
src/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: exceptions.py  youtube_adapter.py
src/infrastructure/adapters/llm/: __init__.py  exceptions.py  factory.py  gemini_adapter.py  groq_adapter.py  interface.py
src/infrastructure/api/: __init__.py  serializers.py  urls.py  views.py
src/infrastructure/persistence/: __init__.py  apps.py  models.py
src/infrastructure/persistence/migrations/: 0001_initial.py
tests/: __init__.py  conftest.py  test_api.py  test_domain_models.py  test_graph_nodes.py  test_youtube_adapter.py
