[project]
name = "agente-ia-youtube"
version = "0.1.0"
description = "Agente de IA que evalua videos de Youtube"
authors = [
    {name = "Tomas Gonzalez", email = "tomi150301@gmail.com"}
]
license = {text = "Tomas Daniel Gonzalez"}
readme = "README.md"
requires-python = ">=3.12,<3.15" 
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "adrf (>=0.1.12,<0.2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
